# gonio_firmware

./: .gitignore  CMakeLists.txt  GONIOMETER_README.md  Thesis Electrogoniometer Revision.md  Thesis_Technical_Documentation.md  build_web.py  partitions.csv
components/libpeer/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
components/libpeer/examples/generic/: CMakeLists.txt
components/libpeer/examples/raspberrypi/: CMakeLists.txt
components/libpeer/src/: CMakeLists.txt  config.h  dtls_srtp.c  peer_connection.c  sctp.c  sctp.h
components/libpeer/tests/: CMakeLists.txt
main/: CMakeLists.txt  app_config.h  app_runtime.c  app_runtime.h  ext_flash.c  ext_flash.h  font8x8_basic.c  font8x8_basic.h  hfhl_ws.c  hfhl_ws.h  idf_component.yml  ina219.c  ina219.h  main.c  mt6701.c  mt6701.h  ring_buffer.c  ring_buffer.h  ssd1306_util.c  ssd1306_util.h  web_server.c  web_server.h  web_server_api.c  web_server_api.h  web_server_state.h  web_server_static.c  web_server_static.h  webrtc.c  webrtc.h
spiffs_image/: index.html  manifest.json
